<resources>
    <string name="app_name">NoVoid</string>
    <string name="no_internet">No internet</string>
    <string name="ok">Ok</string>
    <string name="required">Required</string>
    <string name="error">Error</string>
    <string name="loading">Loading...</string>
    <string name="total_death">Deaths</string>
    <string name="total_confirmed">Infected cases</string>
    <string name="dashboard">Dashboard</string>
    <string name="countries">Countries</string>
    <string name="map_view">Map view</string>
    <string name="stay_safe">Stay safe</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="n_a">N/A</string>
    <string name="actual">Actual</string>
    <string name="logarithm" />
    <string name="logrithmic">Logrithmtic</string>
    <string name="daily_cases">Daily cases</string>
    <string name="total_recorved">Recovered</string>
    <string name="search_country">Search country</string>
    <string name="google_maps_api_key">AIzaSyD23P9P2S1yRdE_yr-cgengLKENR_B-PHw</string>
    <string name="total">Total</string>
    <string name="provincial">Provincial</string>
    <string name="no_provincial_stats_available">No provincial stats available</string>
    <string name="view_detail">View detail</string>
    <string name="sort_by">Sort by</string>
    <string name="apply_filter">Apply filter</string>
    <string name="low"><![CDATA[Low ( <100)]]></string>
    <string name="meduim"><![CDATA[Medium (<1000)]]></string>
    <string name="high"><![CDATA[High ( >5000)]]></string>
    <string name="descending">Descending</string>
    <string name="ascending">Ascending</string>
    <string name="all_record">All records</string>
    <string name="settings">Settings</string>
    <string name="about">About Us</string>
    <string name="help">Help</string>
    <string name="faqs">FAQs</string>
    <string name="death_cases">Death cases</string>
    <string name="confirmed_cases">Confirmed cases</string>
    <string name="recovered_cases">Recovered cases</string>
    <string name="guide_lines">Guidelines</string>
    <string name="dark_mode">Dark mode</string>
    <string name="fantech_website">fantechlabs.io</string>
    <string name="none">None</string>
    <string name="infection_level_1">100+</string>
    <string name="infection_level_2">1K+</string>
    <string name="infection_level_3">10K+</string>
    <string name="infection_level_4">100K+</string>
    <string name="covid_global_view">COVID-19 Global view</string>
    <string name="total_death_in_k">Deaths </string>
    <string name="total_confirmed_in_k">Infected cases</string>
    <string name="total_recovered_in_k">Recovered</string>
    <string name="elapsed_time_days_hour">last updated %1$d days, %2$d hours ago</string>
    <string name="elapsed_hour_minutes">last updated %1$d hour, %2$d min ago</string>
    <string name="elapsed_time_minutes">last updated %d min ago</string>
    <string name="elapsed_time_secounds">last updated %1$d sec ago</string>
    <string name="updated_at_template">Updated %1$s</string>
    <string name="stats_notification">Deaths %1$d\nInfected cases %2$d\nRecovered %3$d</string>
    <string name="today_stats">Today stats</string>
    <string name="guide1">1- Covid-19 or the novel coronavirus first emerged in Wuhan, China in December, 2019.</string>
    <string name="things_we_need_to_know">Things We Need To Know</string>
    <string name="guide2">"2- Its primary symptoms are cough, fever,  shortness of breath. The virus spreads  through lungs, it can cause Pneumonia and  in severe cases death. "</string>
    <string name="guide3">"3- The coronavirus spreads from bodily  fluids (saliva or mucus) just like other  respiratory diseases such as cold and flu. \" "</string>
    <string name="guide4">4- It initially transmitted from animals to  humans and now it can transmit from  humans to humans.</string>
    <string name="guide5">"5- It can survive for a varied number of  hours on different surfaces and can infect  people who come in contact with those surfaces. "</string>
    <string name="guide6">6- It takes upto 14 days before the  symptoms appear.</string>
    <string name="guide7">7- There is no vaccine for new coronavirus.</string>
    <string name="guide8">"8- Maintaining basic hygiene, and  frequently washing your hands for 20  seconds can reduce the chances of  infection. "</string>
    <string name="share_stats">Share stats</string>
    <string name="share_stats_with_friend">Share stats with friend</string>
    <string name="help_description">If there is a problem, or you need assistance for using the app, please refer to the FAQs sections. If you can’t find answer to your query there please e-mail at</string>
    <string name="info_fantech_website">info@fantechlabs.io</string>
    <string name="faq_title_1">Is the data displayed in the app authentic?</string>
    <string name="faq_description_1">"The data displayed in the app is collected from  authorized sources such as World Health  Organization and official statistics about the  Covid-19 cases. published by each country. "</string>
    <string name="faq_title_2">What does infected cases mean?</string>
    <string name="faq_description_2">Infected cases indicate the number of total patients  that got the infection, it also includes the number of  people who recovered or died from the infection.</string>
    <string name="faq_title_3">How can I sort the list of countries?</string>
    <string name="faq_description_3">This list of countries can be sorted by tapping at the right most side of the Search country bar. You can sort the list alphabetically using two options; ascending (AZ) and descending (ZA). The list can be sorted by number of deaths, infected cases and recovered cases, where countries with highest number of respective cases shown at the top.</string>
    <string name="fantech_labs">Fantech Labs</string>
    <string name="fantech_labs_description"><![CDATA[Fantech Labs is an information technology & consulting company that provides highly innovative and flexible solutions to address digital needs of businesses. We are a team of individuals that value learning, creativity, and agility at work. Technology is our passion; we use it as a means to help business and communities grow. With the aim of serving communities and helping them in these testing times, Fantech has decided to play its part. NoVoid is our way of showing care, love and support to people around the world affected from Covid-19. NoVoid is a Covid-19 tracking app, that keeps users up to date about the cases, recoveries and unfortunate deaths of patients around the world. The app is absolutely free and displays data for all the countries that are affected. It also provides guidelines and safety measures approved by WHO to help people take the right steps for dealing with Covid-19.]]></string>
    <string name="about_ap">About app</string>
    <string name="your_location">Your location</string>
    <string name="set_notifications">Set Notifications</string>
    <string name="select_notification_time">Select Notification Time</string>
    <string name="all_set">All set</string>
    <string name="hurrah">Hurrah!</string>
    <string name="notification_set_successfully">Notification set successfully</string>
    <string name="get_started">Get started</string>
    <string name="please_select_you_country_we_will_send_you_daily_notification_with_covid_19_stats">we will send you daily notification with Covid-19 stats.Please click on Next to proceed</string>
    <string name="next">Next</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="select_time">Select time</string>
    <string name="time_template">HH:MM AM</string>
    <string name="do_you_want_get_daily_stats_notification_for_your_country">Do you want get daily stats notification for your country</string>
    <string name="please_select_notification_time">Please select notification time</string>
    <string name="notification_time">Notification time</string>
    <string name="last_updated">Last updated</string>
    <string name="no_result_found">No result found</string>
    <string name="about_app">NoVoid is a Covid-19 tracking app, that keeps users up to date about the cases, recoveries and unfortunate deaths of patients around the world. The app is absolutely free and displays data for all the countries that are affected. It also provides guidelines and safety measures approved by WHO to help people take the right steps for dealing with Covid-19.</string>
    <string name="infected">Infected</string>
    <string name="do_you_really_clode">Do you really want to close app</string>
    <string name="close_app">Close app</string>

</resources>
