<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".fragments.Wizard4Fragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:lineSpacingExtra="3.5sp"
        android:text="@string/all_set"
        android:textColor="?attr/green_color_background"
        android:textSize="24sp"
        android:textStyle="bold" />

    <ImageView

        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/novoid_logo_transparent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:lineSpacingExtra="3.5sp"
        android:text="@string/hurrah"
        android:textColor="?attr/green_color_background"
        android:textSize="24sp"
        android:textStyle="bold" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14sp"
        android:lineSpacingExtra="5sp"
        android:text="@string/notification_set_successfully"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="14sp" />

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        app:cardBackgroundColor="@color/orange_color"
        app:cardCornerRadius="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="8dp"
            android:text="@string/get_started"
            android:textAllCaps="true"
            android:textColor="@android:color/white" />
    </androidx.cardview.widget.CardView>

</LinearLayout>