<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="24dp"
        tools:context=".fragments.Wizard1Fragment">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:lineSpacingExtra="3.5sp"
            android:text="@string/app_name"
            android:textColor="?attr/green_color_background"
            android:textSize="24sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:src="@drawable/novoid_logo_transparent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:lineSpacingExtra="3.5sp"
            android:text="@string/about_ap"
            android:textColor="?attr/green_color_background"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14sp"
            android:lineSpacingExtra="5sp"
            android:text="@string/about_app"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="14sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/next"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:background="@color/orange_color"
            android:text="@string/next"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/white"
            android:theme="@style/MatButton"
            app:backgroundTint="@color/orange_color"
            app:cornerRadius="20dp" />

    </LinearLayout>
</layout>