<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp"
        tools:context=".fragments.Wizard3Fragment">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:lineSpacingExtra="3.5sp"
            android:text="@string/set_notifications"
            android:textColor="?attr/green_color_background"
            android:textSize="24sp"
            android:textStyle="bold" />

        <ImageView

            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:src="@drawable/set_notification" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/select_time"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="2dp"
            android:background="@android:color/white"
            android:drawableStart="@drawable/ic_notifications_black_solid_24dp"
            android:drawableEnd="@drawable/ic_keyboard_arrow_down_black_24dp"
            android:padding="5dp"
            android:paddingStart="10dp"
            android:text="@string/select_notification_time"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/black"
            android:theme="@style/MatButton"
            app:backgroundTint="@android:color/white"
            app:cornerRadius="20dp"
            app:icon="@drawable/ic_notifications_black_solid_24dp" />


        <TextView

            android:id="@+id/time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:lineSpacingExtra="5sp"
            android:text="@string/time_template"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="25sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/next"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:background="@color/orange_color"
            android:text="@string/next"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/white"
            android:theme="@style/MatButton"
            app:backgroundTint="@color/orange_color"
            app:cornerRadius="20dp" />

    </LinearLayout>
</layout>