<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp"
        tools:context=".fragments.Wizard2Fragment">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:lineSpacingExtra="3.5sp"
            android:text="@string/your_location"
            android:textColor="?attr/green_color_background"
            android:textSize="24sp"
            android:textStyle="bold" />

        <ImageView

            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:visibility="gone" />


        <ImageView
            android:id="@+id/country_flag"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14sp"
            android:lineSpacingExtra="5sp"
            android:text="@string/do_you_want_get_daily_stats_notification_for_your_country"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/country_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:lineSpacingExtra="3.5sp"
            android:text="@string/your_location"
            android:textColor="?attr/green_color_background"
            android:textSize="24sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp">

            <com.google.android.material.button.MaterialButton
                android:layout_width="100dp"
                android:id="@+id/cancel"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@color/orange_color"
                android:text="@string/no"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/white"
                android:theme="@style/MatButton"
                app:backgroundTint="@color/orange_color"
                app:cornerRadius="20dp" />

            <com.google.android.material.button.MaterialButton
                android:layout_width="100dp"
                android:id="@+id/next"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="20dp"
                android:background="@color/orange_color"
                android:text="@string/yes"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/white"
                android:theme="@style/MatButton"
                app:backgroundTint="@color/orange_color"
                app:cornerRadius="20dp" />


        </LinearLayout>

    </LinearLayout>
</layout>