<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/app_background"
        android:minHeight="300dp"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sort_by"
            android:textColor="?attr/background_text_color"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/accending"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="?attr/grey_color_background"
                android:checked="true"
                android:text="@string/ascending"
                android:textColor="?attr/grey_color_background" />

            <RadioButton
                android:id="@+id/descending"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="?attr/grey_color_background"
                android:text="@string/descending"
                android:textColor="?attr/grey_color_background" />
        </RadioGroup>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:visibility="gone">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Death rate"
                android:textColor="?attr/background_text_color"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="?attr/grey_color_background"
                app:layout_constraintEnd_toEndOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <SeekBar
            android:id="@+id/seek_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:indeterminateTint="?attr/grey_color_background"
            android:visibility="gone" />

        <androidx.cardview.widget.CardView
            android:id="@+id/apply_filter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="2dp"
            android:layout_marginBottom="10dp"
            android:foreground="?selectableItemBackground"
            app:cardBackgroundColor="?attr/app_foreground"
            app:cardCornerRadius="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:padding="10dp"
                android:text="@string/apply_filter"
                android:textAlignment="center"
                android:textColor="?attr/background_text_color"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>

    </LinearLayout>
</layout>