<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/app_background"
        android:orientation="vertical"
        tools:context=".activities.HelpActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@android:color/transparent"
                app:navigationIcon="@drawable/ic_arrow_back_black_24dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center_horizontal"
                    android:lineSpacingExtra="3sp"
                    android:text="@string/help"
                    android:textColor="?attr/background_text_color"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="34dp"
            android:layout_marginEnd="24dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="2.5sp"
                android:text="@string/help"
                android:textColor="#00c6eb"
                android:textSize="24sp" />


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@color/grey_color" />

            <TextView
                android:layout_marginTop="17dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="2sp"
                android:textColor="?attr/background_text_color"
                android:textSize="20sp"
                android:text="@string/help_description" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24sp"
                android:lineSpacingExtra="2sp"
                android:textColor="@color/orange_color"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/info_fantech_website" />


        </LinearLayout>


    </LinearLayout>
</layout>